k8s/apps/security/policies/99-default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: security
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
